--- a/hw3/static/style.css
+++ b/hw3/static/style.css
@@ -1,17 +1,55 @@
 .cell
 {
     display: inline-block;
+    position: relative;
     width: 25px;
     height: 25px;
     border: 1px solid #000;
 }
 
-.cell_cross
+.cell:after,
+.cell:before
 {
-    background: #707;
+	content: ' ';
+	opacity: 0;
+	width: 0;
+	height: 0;
+	transition-duration: .3s;
+	transform-origin: center;
 }
 
-.cell_zero
+.cell_cross:before, .cell_cross:after
 {
-    background: #777;
+  	position: absolute;
+  	content: ' ';
+    left: 9.5px;
+  	top: 5px;
+  	height: 15px;
+  	width: 3px;
+  	background-color: #f00;
+  	opacity: 1;
+}
+
+.cell_cross:before
+{
+  	transform: rotate(45deg);
+}
+
+.cell_cross:after
+{
+  	transform: rotate(-45deg);
+}
+
+
+.cell_zero:before
+{
+	content: ' ';
+	position: absolute;
+    width: 12px;
+    height: 12px;
+    top: 3.5px;
+    left: 3px;
+    border: 3px solid #0f0;
+    border-radius: 50%;
+    opacity: 1;
 }
