--- a/hw3/static/style.css
+++ b/hw3/static/style.css
@@ -2,6 +2,7 @@
 {
     display: inline-block;
     position: relative;
+    margin: 0 2px;
     width: 25px;
     height: 25px;
     border: 1px solid #000;
